--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -1,12 +1,11 @@
-.code-block { 
+.code-block {
  border: 1px dotted #d7d7d7;
  margin: 1em 0;
- padding: .5em 1em;
- overflow: auto;
+ padding: 1em 0;
+ overflow: auto
 }
-.image-file { margin: 1em; }
-.image-file-frame { }
-.image-file-frame img {  border: 15px solid #d7d7d7; }
+.image-file { margin: 1em }
+.image-file-frame img { border: 15px solid #d7d7d7 }
 
 /* Default */
 .css_default, .c_default, .code_default, .pl_default, .p_default, 
@@ -16,35 +15,37 @@
 
 /* Comments */
 .code-comment, .css_comment, .c_comment, .c_commentdoc, .c_commentline,
-.c_commentlinedoc, .h_comment,.pl_commentline, .p_commentblock, 
-.p_commentline, .hphp_commentblock, .hphp_commentline, 
-.yaml_comment { 
-  color: #998; 
-  font-style: italic;  
+.c_commentlinedoc, .h_comment,.pl_commentline, .p_commentblock,
+.p_commentline, .hphp_commentblock, .hphp_commentline,
+.yaml_comment {
+ color: #998; 
+ font-style: italic;
 }
 
 /* Language keyword */
-.code-keyword, .pl_word  { color: #789; font-weight: bold;  }
+.code-keyword, .pl_word  { color: #789; font-weight: bold }
 
 /* Type */
-.code-type, .c_word, .c_word2, .p_classname, .hphp_classname
- { color: #468; font-weight: bold;  }
+.code-type, .c_word, .c_word2, .p_classname, .hphp_classname{
+ color: #468;
+ font-weight: bold;
+}
 
 /* Function */
-.code-func, .p_defname { 
-  color: #900;
-  font-weight: bold;
-  border-bottom: none; 
+.code-func, .p_defname {
+ color: #900;
+ font-weight: bold;
+ border-bottom: none;
 }
 
 /* Pre-processor */
-.code-prep, .c_preprocessor, .pl_preprocessor, .yaml_identifier { 
-  color: #999;
-  font-weight: bold;  
+.code-prep, .c_preprocessor, .pl_preprocessor, .yaml_identifier {
+ color: #999;
+ font-weight: bold;
 }
 
 /* Language construct */
-.code-lang, .p_word { color: #000; font-weight: bold; }
+.code-lang, .p_word { color: #000; font-weight: bold }
 
 /* String */
 .code-string, .c_string, .c_stringeol, .css_doublestring, .css_singlestring,
@@ -52,146 +53,56 @@
 .pl_string_qr, .pl_string_qw, .pl_string_qx, .pl_backticks, .pl_character,
 .p_string, .p_stringeol, .hphp_string, .hphp_stringeol, .hphp_triple,
 .hphp_tripledouble, .p_character, .p_triple, .p_tripledouble {
-  color: #b84;
-  font-weight: normal;
+ color: #b84;
+ font-weight: normal;
 }
 
 /* Variable name */
-.code-var { color: #f9f; }
+.code-var { color: #f9f }
 
-
-/*
- *  SilverCity-specific Styles 
- */
-/* .css_default { } */
-/* .code_default { font-family: monospace; font-size: 9px; } */
-.css_class { color: #900000; }
-/* .css_comment { color: green; font-style: italic; } */
-.css_directive { color: #009000; font-weight: bold; }
-/* .css_doublestring { color: navy; } */
-.css_id { color: #900000; }
-.css_identifier { color: black; }
-.css_important { color: blue; }
-.css_operator { color: #000090; font-weight: bold; }
-.css_pseudoclass { color: #900000; }
-/* .css_singlestring { color: navy; } */
-.css_tag { color: #900000; font-weight: bold; }
-.css_unknown_identifier { color: red; }
-.css_unknown_pseudoclass { color: #ff0000; }
-.css_value { color: navy; }
-.c_character { color: olive; }
-/* .c_comment { color: green; font-style: italic; } */
-/* .c_commentdoc { color: green; font-style: italic; } */
-.c_commentdockeyword { color: navy; font-weight: bold; }
-.c_commentdockeyworderror { color: red; font-weight: bold; }
-/* .c_commentline { color: green; font-style: italic; } */
-/* .c_commentlinedoc { color: green; font-style: italic; } */
-/* .c_default { } */
-.c_identifier { }
-.c_number { color: #009999; }
-.c_operator { color: black; }
-/* .c_preprocessor { color: navy;	font-weight: bold; } */
-.c_regex { color: olive; }
-/* .c_string { color: olive; } */
-/* .c_stringeol { color: olive; } */
-.c_uuid { color: olive; }
-.c_verbatim { color: olive; }
-/* .c_word { color: navy; font-weight: bold; } */
-/* .c_word2 { color: navy; font-weight: bold; } */
-.h_asp { color: #ffff00; }
-.h_aspat { color: #ffdf00; }
-.h_attribute { color: #008080; }
-.h_attributeunknown { color: #ff0000; }
-.h_cdata { color: #ffdf00; }
-/* .h_comment { color: #808000; } */
-/* .h_default { } */
-/* .h_doublestring { color: olive; } */
-.h_entity { color: #800080; }
-.h_number { color: #009999; }
-.h_other { color: #800080; }
-.h_script { color: #000080; }
-/* .h_singlestring { color: olive; } */
-.h_tag { color: #000080; }
-.h_tagend { color: #000080; }
-.h_tagunknown { color: #ff0000; }
-.h_xmlend { color: #0000ff; }
-.h_xmlstart { color: #0000ff; }
-.pl_array { color: black; }
-/* .pl_backticks { color: olive; } */
-/* .pl_character { color: olive; } */
-/* .pl_commentline { color: green; font-style: italic; } */
-.pl_datasection { color: olive; }
-/* .pl_default { } */
-.pl_error { color: red; font-weight: bold; }
-.pl_hash { color: black; }
-.pl_here_delim { color: olive; }
-.pl_here_q { color: olive; }
-.pl_here_qq { color: olive; }
-.pl_here_qx { color: olive; }
-.pl_identifier { color: black; }
-.pl_longquote { color: olive; }
-.pl_number { color: #009999; }
-.pl_operator { color: black; }
-.pl_pod { color: black; font-style: italic; }
-/* .pl_preprocessor { color: navy; font-weight: bold; } */
-.pl_punctuation { color: black; }
-.pl_regex { color: olive; }
-.pl_regsubst { color: olive; }
-.pl_scalar { color: black; }
-/* .pl_string { color: olive; } */
-/* .pl_string_q { color: olive; } */
-/* .pl_string_qq { color: olive; } */
-/* .pl_string_qr { color: olive; } */
-/* .pl_string_qw { color: olive; } */
-/* .pl_string_qx { color: olive; } */
-.pl_symboltable { color: black; }
-/* .pl_word { color: navy; font-weight: bold; } */
-/* .p_character { color: olive; } */
-/* .p_classname { color: blue; font-weight: bold; } */
-/* .p_commentblock { color: gray; font-style: italic; } */
-/* .p_commentline { color: green; font-style: italic; } */
-/* .p_default { } */
-/* .p_defname { color: #009999; font-weight: bold; } */
-.p_identifier { color: black; }
-.p_number { color: #009999; }
-.p_operator { color: black; }
-/* .p_string { color: olive; } */
-/* .p_stringeol { color: olive; } */
-/* .p_triple { color: olive; } */
-/* .p_tripledouble { color: olive; } */
-/* .p_word { color: navy; font-weight: bold; } */
-.hphp_character { color: olive; }
-/* .hphp_classname { color: blue; font-weight: bold; } */
-/* .hphp_commentblock { color: gray; font-style: italic; } */
-/* .hphp_commentline { color: green; font-style: italic; } */
-/* .hphp_default { } */
-.hphp_defname { color: #009999; font-weight: bold; }
-.hphp_identifier { color: black; }
-.hphp_number { color: #009999; }
-.hphp_operator { color: black; }
-/* .hphp_string { color: olive; } */
-/* .hphp_stringeol { color: olive; } */
-/* .hphp_triple { color: olive; } */
-/* .hphp_tripledouble { color: olive; } */
-.hphp_word { color: navy; font-weight: bold; }
-/* .yaml_comment { color: #008800; font-style: italic; } */
-/* .yaml_default { } */
-.yaml_document { color: #808080; font-style: italic; }
-/* .yaml_identifier { color: navy; font-weight: bold; } */
-.yaml_keyword { color: #880088; }
-.yaml_number { color: #880000; }
-.yaml_reference { color: #008888; }
-.v_comment { color: gray; font-style: italic; }
-.v_commentline { color: red; font-style: italic; }
-.v_commentlinebang { color: red; font-style: italic; }
-.v_default { }
-.v_identifier { color: black; }
-.v_number { color: #009999; }
-.v_operator{color: black;}
-.v_preprocessor{color: #009999;}
-.v_string{color: olive;}
-.v_stringeol{color: olive;}
-.v_user{ color: blue; font-weight: bold; }
-.v_word { color: navy; font-weight: bold; }
-.v_word2 { color: green; font-weight: bold; }
-.v_word3{color: navy;font-weight: bold; }
+/* SilverCity-specific styles */
+.css_id, .css_class, .css_pseudoclass, .css_tag { color: #900000 }
+.css_directive { color: #009000; font-weight: bold }
+.css_important { color: blue }
+.css_operator { color: #000090; font-weight: bold }
+.css_tag { font-weight: bold }
+.css_unknown_identifier, .css_unknown_pseudoclass { color: red }
+.css_value { color: navy }
+.c_commentdockeyword { color: navy; font-weight: bold }
+.c_commentdockeyworderror { color: red; font-weight: bold }
+.c_character, .c_regex, .c_uuid, .c_verbatim { color: olive }
+.c_number { color: #099 }
+.h_asp { color: #ff0 }
+.h_aspat { color: #ffdf00 }
+.h_attribute { color: teal }
+.h_attributeunknown { color: red }
+.h_cdata { color: #ffdf00 }
+.h_entity { color: purple }
+.h_number { color: #099 }
+.h_other { color: purple }
+.h_script, .h_tag, .h_tagend { color: navy }
+.h_tagunknown { color: red }
+.h_xmlend, .h_xmlstart { color: blue }
+.pl_datasection { color: olive }
+.pl_error { color: red; font-weight: bold }
+.pl_hash { color: #000 }
+.pl_here_delim, .pl_here_q, .pl_here_qq, .pl_here_qx, .pl_longquote { color: olive }
+.pl_number { color: #099 }
+.pl_pod { font-style: italic }
+.pl_regex, .pl_regsubst { color: olive }
+.p_number { color: #099 }
+.hphp_character { color: olive }
+.hphp_defname { color: #099; font-weight: bold }
+.hphp_number { color: #099 }
+.hphp_word { color: navy; font-weight: bold }
+.yaml_document { color: gray; font-style: italic }
+.yaml_keyword { color: #808 }
+.yaml_number { color: #800 }
+.yaml_reference { color: #088 }
+.v_comment { color: gray; font-style: italic }
+.v_commentline, .v_commentlinebang { color: red; font-style: italic }
+.v_number, .v_preprocessor { color: #099 }
+.v_string, .v_stringeol { color: olive }
+.v_user{ color: blue; font-weight: bold }
+.v_word, .v_word3 { color: navy; font-weight: bold }
+.v_word2 { color: green; font-weight: bold }
