--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -53,19 +53,14 @@ input[type=text], input.textwidget, textarea {
  color: #000;
  border: 1px solid #d7d7d7;
 }
-input[type=text], input.textwidget { padding: 0 .5em }
+input[type=text], input.textwidget { padding: .25em .5em }
 input[type=text]:focus, textarea:focus { border: 1px solid #886 }
 option { border-bottom: 1px dotted #d7d7d7 }
 fieldset { border: 1px solid #d7d7d7; padding: .5em; margin: 0 }
 fieldset.iefix { border: none; padding: 0; margin: 0 }
-* html fieldset.iefix { weidth: 98% }
+* html fieldset.iefix { width: 98% }
 fieldset.iefix p { margin: 0 }
-legend {
- color: #999;
- padding: 0 .25em;
- font-size: 90%;
- font-weight: bold;
-}
+legend { color: #999; padding: 0 .25em; font-size: 90%; font-weight: bold }
 label.disabled { color: #d7d7d7 }
 .att-label { float:left; width: 7em; text-align: right; margin-right: .5em; }
 .buttons { margin: .5em .5em .5em 0 }
