--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -55,7 +55,6 @@ input[type=text], input.textwidget, textarea {
 }
 input[type=text], input.textwidget { padding: .25em .5em }
 input[type=text]:focus, textarea:focus { border: 1px solid #886 }
-input[type=file] { margin: 0; padding: 0 }
 option { border-bottom: 1px dotted #d7d7d7 }
 fieldset { border: 1px solid #d7d7d7; padding: .5em; margin: 0 }
 fieldset.iefix { border: none; padding: 0; margin: 0 }
@@ -272,6 +271,8 @@ a.missing:hover { color: #000; }
 /* Styles for the form for adding attachments. */
 #attachment .field { margin-top: 1.3em }
 #attachment label { padding-left: .2em }
+#attachment fieldset { margin-top: 2em }
+#attachment fieldset .field { float: left; margin: 0 1em .5em 0 }
 
 /* Styles for tabular listings such as those used for displaying directory
    contents and report results. */
