--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -10,8 +10,8 @@
 #changeinfo br { clear: left }
 #changeinfo .options { padding: 0 0 1em 1em }
 #changeinfo .options, #changeinfo .buttons { clear: left }
-#delete_ver { margin-left: 6em }
-#preview { background: #f4f4f4 url(../draft.png) }
+#delete { margin-left: 6em }
+#preview { background: #f4f4f4 url(../draft.png); margin-top: 2em }
 
 /* Styles for the page history table
    (extends the styles for "table.listing") */
