--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -208,7 +208,7 @@ label.disabled { color: #d7d7d7 }
  color: #999;
  font-size: 90%;
  margin: 1em;
- text-align: right
+ text-align: right;
 }
 #help :link, #help :visited { cursor: help }
 #help hr { display: none }
@@ -286,6 +286,18 @@ table.listing {
  width: 100%;
 }
 table.listing th { text-align: left; padding: 0 1em .1em 0; font-size: 12px }
+table.listing thead { background: #f7f7f0 }
+table.listing thead th {
+ border: 1px solid #d7d7d7;
+ border-bottom-color: #999;
+ font-size: 11px;
+ font-weight: bold;
+ padding: 2px .5em;
+ vertical-align: bottom;
+}
+table.listing thead th :link:hover, table.listing thead th :visited:hover {
+ background-color: transparent;
+}
 table.listing thead th a { border: none; padding-right: 12px }
 table.listing th.asc a, table.listing th.desc a { font-weight: bold }
 table.listing th.asc a, table.listing th.desc a {
