--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -13,6 +13,8 @@
  width: .8em; height: .8em;
 }
 #overview .message { padding: 1em 0 1px }
-#overview dd.message p, #overview dd.message ul, #overview dd.message ol { margin-top: 0; margin-bottom: 1em }
-
+#overview dd.message p, #overview dd.message ul, #overview dd.message ol {
+ margin-bottom: 1em;
+ margin-top: 0;
+}
 #overview .files { padding: 1px 0 }
