--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -21,3 +21,17 @@
 }
 #wikihist td.version { text-align: center }
 #wikihist td.comment { width: 100% }
+
+/* Styles for the TracGuideToc wikimacro */
+.wiki-toc {
+ padding: .5em 0;
+ margin: 0 1em 0 1em;
+ float: right;
+ border: 1px solid #ddc;
+ background: #ffd;
+ font-size: 85%;
+}
+.wiki-toc h4 { margin: 0 1em; }
+.wiki-toc ul { list-style: none; padding: 0; margin: 0; }
+.wiki-toc li { margin: 0; padding: 0 1em; }
+.wiki-toc .active { background: #ff9; }
