--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -25,13 +25,14 @@
 /* Styles for the TracGuideToc wikimacro */
 .wiki-toc {
  padding: .5em 0;
- margin: 0 1em 0 1em;
+ margin: 0 0 2em 1em;
  float: right;
  border: 1px solid #ddc;
  background: #ffd;
  font-size: 85%;
+ position: relative;
 }
-.wiki-toc h4 { margin: 0 1em; }
+.wiki-toc h4 { font-size: 12px; margin: 0 1em; }
 .wiki-toc ul { list-style: none; padding: 0; margin: 0; }
 .wiki-toc li { margin: 0; padding: 0 1em; }
 .wiki-toc .active { background: #ff9; }
